Changed a bit in my Resume

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 html body{
 	overflow-x: hidden;
-	font-family: Raleway,sans-serif;
+	font-family: "Times New Roman", Times, serif;
 }
 .jumbotron {
 	height: 750px;
