--- a/main.css
+++ b/main.css
@@ -49,6 +49,7 @@ html body{
 	border-radius: 150px;
 	-webkit-border-radius: 150px;
 	-moz-border-radius: 150px;
+	background-image: url("images/MyImage.jpg")
 }
 
 .whatido {
