--- a/main.css
+++ b/main.css
@@ -49,7 +49,7 @@ html body{
 	border-radius: 150px;
 	-webkit-border-radius: 150px;
 	-moz-border-radius: 150px;
-	background-image: url("images/MyImage.png")
+	background-image: url("images/My_Image.jpg");
 }
 
 .whatido {
