--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,35 @@
-.container {
-    height: 100vh;
-}
-.container #main-page-heading{
-    
-}
-.container #main-page-heading h1 {
-    
+div.container-fluid .main-intro{
     margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -50%);
-    text-shadow: 0 1px 0 #ccc,
-               0 2px 0 #c9c9c9,
-               0 3px 0 #bbb,
-               0 4px 0 #b9b9b9,
-               0 5px 0 #aaa,
-               0 6px 1px rgba(0,0,0,.1),
-               0 0 5px rgba(0,0,0,.1),
-               0 1px 3px rgba(0,0,0,.3),
-               0 3px 5px rgba(0,0,0,.2),
-               0 5px 10px rgba(0,0,0,.25),
-               0 10px 10px rgba(0,0,0,.2),
-               0 20px 20px rgba(0,0,0,.15);
+    padding: 30px;
+    transform: translate(-50%, -50%) 
+}
+
+#links li{
+    padding: 10px
+}
+
+div.full-page {
+    height: 100vh;
+    background-color: bisque;
+}
+
+#fix-image-size {
+    
+    height: 220px;
+    width: 220px;
+    margin: 0 auto;
+    border: solid 5px thick;
+}
+
+div.half-page {
+    height: 50vh;
+    background-color: azure
+}
+
+#about-heading {
+    padding: 10px;
 }
