--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-div.container-fluid .main-intro{
+div.container-fluid .main-intro {
     margin: 0;
     position: absolute;
     top: 50%;
@@ -9,18 +9,28 @@ div.container-fluid .main-intro{
 }
 
 #links li{
-    padding: 10px
+    padding: 20px
 }
 
 div.full-page {
     height: 100vh;
-    background-color: bisque;
+    background-color: #2c3e50;
+}
+
+.text-styles {
+    color: white;
+    font-size: 3em;
+}
+
+
+.color-white {
+    color: white;
 }
 
 #fix-image-size {
     
-    height: 220px;
-    width: 220px;
+    height: 150px;
+    width: 150px;
     margin: 0 auto;
     border: solid 5px thick;
 }
