--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,10 @@ div.title-content {
     margin: 0px;
 }
 
+.blur {
+   
+}
+
 .text3d {
     text-shadow: 0 1px 0 #ccc,
                0 2px 0 #c9c9c9,
@@ -97,6 +101,20 @@ div.title-content {
                0 5px 10px rgba(0,0,0,.25),
                0 10px 10px rgba(0,0,0,.2),
                0 20px 20px rgba(0,0,0,.15);
+}
+
+#research-title {
+    background-image: url(../img/research-title.jpg);
+    background-size: cover;
+    backface-visibility: hidden;
+    background-attachment: fixed;
+}
+
+#reach-me {
+    background-image: url(../img/reach-me.jpg);
+    background-size: cover;
+    backface-visibility: hidden;
+    background-attachment: fixed;
 }
 
 /*CRAP I NEED TO REPLACE*/
