--- a/css/main.css
+++ b/css/main.css
@@ -162,3 +162,8 @@ div.title-content {
     height: 300px;
     width: 400px;
 }
+
+.research-img-config {
+    height: 145px;
+    width: 553px;
+}
