--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav class="{% if page.title == "Home" %}nav-home{% else %}nav{% endif %}">
     <ul class="list">
-        <!-- {% if page.title != "Home" %} -->
+        {% if page.title != "Home" %}
             <li class="item">
                 <a class="link" href="{{ site.url }}/">Home</a>
             </li>
@@ -14,26 +14,26 @@
             <!-- {% endif %}
         {% endif %} -->
 
-        <!-- {% if site.blog == true %}
-            {% if page.title != "Blog" %} -->
+        {% if site.blog == true %}
+            {% if page.title != "Blog" %}
                 <li class="item">
                     <a class="link" href="{{ site.url }}/blog">Blog</a>
                 </li>
-            <!-- {% endif %}
-        {% endif %} -->
+            {% endif %}
+        {% endif %}
 
-        <!-- {% if site.projects == true %}
-            {% if page.title != "Projects" %} -->
+        {% if site.projects == true %}
+            {% if page.title != "Projects" %}
                 <li class="item">
                     <a class="link" href="{{ site.url }}/projects">Projects</a>
                 </li>
-            <!-- {% endif %}
-        {% endif %} -->
+            {% endif %}
+        {% endif %}
 
-        <!-- {% if site.resume == true %} -->
+        {% if site.resume == true && page.title == "Home"%}
             <li class="item">
                 <a class="link" href="{% if site.resume-external %}{{ site.resume-url }}{% else %}{{ site.url }}/{{ site.resume-url }}{% endif %}">Résumé</a>
             </li>
-        <!-- {% endif %} -->
+        {% endif %}
     </ul>
 </nav>
