--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,15 +4,15 @@
             <li class="item">
                 <a class="link" href="{{ site.url }}/">Home</a>
             </li>
-        <!-- {% endif %} -->
+        {% endif %}
 
-        <!-- {% if site.about == true %}
-            {% if page.title != "About" %} -->
+        {% if site.about == true %}
+            {% if page.title != "About" %}
                 <li class="item">
                     <a class="link" href="{{ site.url }}/about">About</a>
                 </li>
-            <!-- {% endif %}
-        {% endif %} -->
+            {% endif %}
+        {% endif %}
 
         {% if site.blog == true %}
             {% if page.title != "Blog" %}
@@ -30,7 +30,7 @@
             {% endif %}
         {% endif %}
 
-        {% if site.resume == true && page.title == "Home"%}
+        {% if site.resume == true %}
             <li class="item">
                 <a class="link" href="{% if site.resume-external %}{{ site.resume-url }}{% else %}{{ site.url }}/{{ site.resume-url }}{% endif %}">Résumé</a>
             </li>
