added some more

--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -131,3 +131,10 @@ pre
 
 .wrapper-large
 	max-width: 810px
+
+.trail 
+	position: absolute
+	height: 6px
+	width: 6px
+	border-radius: 3px
+	background: teal
