--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,7 @@
 {% if page.title == "Home"
    or page.title == "Tags"
+   or page.title == "Blog"
+   or page.title == "Projects"
 %}{% assign showHeader = true %}{% endif %}
 
 {% if showHeader == true %}
