--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,12 +18,13 @@ layout: compress
 
     <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}{{ "/feed.xml" }}" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
 
     <style>
     {% capture scss_sheet %}{% include style.scss %}{% endcapture %}
     {{ scss_sheet | scssify }}
     </style>
+    
     <!-- {% if page.title == "Home" %}
       <script src="../assets/libraries/p5.js" type="text/javascript"></script>
       <script src="../assets/libraries/p5.dom.js" type="text/javascript"></script>
